hphp/hack/test/fanout/modules/module-make-internal-typedef.php.incr_no_old_decls.exp
=== base errors ===
No errors!
=== changed errors ===
foo-use.php:3:24,26: Cannot access an internal element from module `A` outside of a module (Typing[4444])
  foo-defn.php:5:6,8: This is from module `A`
=== fanout ===
Fun return_foo
